# Rust_Problems

./: 404.html  index.html
src/: 1-is-even.rs  2-fib.rs  3-str.rs  4-infinite-llop  input-1.rs  input.rs  lib.rs  main.rs  result.rs  shopping-application.rs  test.rs  web-server-1.rs
src/todo_app/: .env  Cargo.toml  plan.txt  todo.db
src/todo_app/migrations/2025-06-24-010620_create_todos/: up.sql
src/todo_app/src/: lib.rs  models.rs  repository.rs  schema.rs
src/todo_app/src/db/: mod.rs  query_loader.rs
src/todo_app/src/db/queries/: todos.sql
