[package]
name = "todo_app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
axum-extra = "0.9"
diesel = { version = "2.1", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.26", features = ["bundled"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21.3"
regex = "1.11.1"
